# efficient-rashomon-rule-set

./: .flake8  .gitignore  .pre-commit-config.yaml  .projectile  CITATION.cff  Makefile  README.md  [BB]efficacy-of-optimization.ipynb  all_averages_counts_GT_sfq_135_0.4_0.4  all_averages_counts_GT_sfq_591_0.4_0.8  all_averages_counts_GT_sfq_805_0.4_0.8  all_averages_counts_GT_synthetic_400_0.8_0.4  all_averages_counts_MC_mushrooms__159_0.8_0.8  all_averages_counts_MC_mushrooms__317_0.4_0.8  all_averages_counts_MC_sfq__135_0.8_0.8  all_averages_counts_MC_sfq__175_0.4_0.4  all_averages_counts_MC_sfq__591_0.4_0.4  all_averages_counts_MC_sfq__805_0.4_0.4  all_averages_counts_MC_sfq__805_0.8_0.4  all_averages_counts_MC_synthetic__400_0.4_0.4  all_averages_times_GT_mushrooms_317_0.4_0.8  all_averages_times_GT_sfq_127_0.4_0.4  all_averages_times_GT_sfq_591_0.4_0.8  all_averages_times_GT_synthetic_400_0.8_0.2  all_averages_times_MC_mushrooms_159_0.8_0.8  all_averages_times_MC_mushrooms_317_0.4_0.4  all_averages_times_MC_mushrooms_317_0.8_0.8  all_averages_times_MC_sfq_135_0.4_0.4  all_averages_times_MC_synthetic_400_0.2_0.4  counts_by_rules_mushrooms_317_20_225  counts_by_rules_mushrooms_317_24_225  counts_by_rules_mushrooms_317_8_1138  counts_by_rules_mushrooms_317_8_506  counts_by_rules_sfq_1661_16_1138  counts_by_rules_sfq_1661_24_506  counts_by_rules_sfq_1661_8_225  counts_by_rules_synthetic_400_4_1138  counts_by_rules_synthetic_400_8_1138  counts_by_rules_synthetic_400_8_506  profile_approx_mc2_core.py  (+38 more)
bds/: SampleTreeUtils.py  bb.py  bbSampleTree.py  bbSampleTreeApprox.py  (+29 more)
(+845 files in other folders)
