[tool.poetry]
name = "bds"
version = "0.1.0"
description = ""
authors = ["Han Xiao <xiaohan2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0.post1"
seaborn = "^0.12.2"
ortools = "^9.5.2237"
pandas = "^1.5.3"
notebook = "^6.5.2"
ray = "^2.2.0"
pytest = "^7.2.1"
jupyter-nbextensions-configurator = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
